--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@ background:(0,0,0,0.5);
 box-shadow: 1px 1px 5px black;
 padding: 50px;
 position: absolute;
-left: 445px;
+left: 500px;
 border-radius: 10px;
 visibility: hidden;
 }
+#weathermood {
+display: inline;
+
+}
 #weather-container h1{
 margin: 5px;
+text-align: center;
 font-size: 40px;
 font-family: sans-serif;
 }
@@ -27,12 +32,12 @@ font-family: sans-serif;
   right: 0;
 }
 #search-container input {
-width: 200px;
+width: 125px;
 }
-#search-container button {
-  width: 75px;
-  background: rgb(0,100,200);
-  }
+#searchBtn:hover {
+  background-color: lightsalmon;
+  width: 85px;
+}
 .search-city {
 border-radius: 5px;
 padding: 5px;
@@ -40,7 +45,8 @@ border: none;
 }
 #weatherMain {
   display: block;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 #weatherMain div{
   display: inline;
@@ -49,6 +55,7 @@ border: none;
 #weatherDescription {
 vertical-align: 50%;
 font-size: 25px;
+
 }
 #temperature {
   font-size: 20px;
@@ -100,6 +107,8 @@ font-size: 25px;
   left: 465px;
  height: 25px;
  width: 25px;
- 
+}
+h1 {
+  color: lightgreen;
 }
 
