--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
   color: white;
   text-shadow:2px 2px 1px black;
   font-family: serif;
-
 }
 #weather-container {
 background:(0,0,0,0.5);
@@ -26,22 +25,12 @@ text-align: center;
 font-size: 40px;
 font-family: sans-serif;
 }
-
- #weather-container {
- background:(0,0,0,0.5);
- box-shadow: 1px 1px 5px black;
- padding: 50px;
- position: absolute;
- left: 445px;
- border-radius: 10px;
- visibility: hidden;
- }
- #weather-container h1{
- margin: 5px;
- font-size: 40px;
- font-family: sans-serif;
- }
-
+#search-container {
+  padding: 15px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 #search-container input {
 width: 125px;
 }
@@ -68,83 +57,56 @@ vertical-align: 50%;
 font-size: 25px;
 
 }
-
- #search-container input {
- width: 200px;
- }
- #search-container button {
-  width: 75px;
-  background: rgb(0,100,200);
-  }
- .search-city {
- border-radius: 5px;
- padding: 5px;
- border: none;
- }
- #weatherMain {
-  display: block;
-  margin-bottom: 25px;
- }
- #weatherMain div{
-  display: inline;
-  padding: 3px;
- }
- #weatherDescription {
- vertical-align: 50%;
- font-size: 25px;
- }
- #temperature {
-
+#temperature {
   font-size: 20px;
   vertical-align: 60%;
- }
- #music-player-clear {
+}
+#music-player-clear {
   position: absolute;
   top: 300px;
   left: 550px;
  height: 75px;
  width: 75px;
  display: none;
- }
- #music-player-rain {
+}
+#music-player-rain {
   position: absolute;
   top: 300px;
   left: 550px;
  height: 75px;
  width: 75px;
  display: none;
- }
- #music-player-storm {
+}
+#music-player-storm {
   position: absolute;
   top: 300px;
   left: 550px;
  height: 75px;
  width: 75px;
  display: none;
- }
- #music-player-snow {
+}
+#music-player-snow {
   position: absolute;
   top: 300px;
   left: 550px;
  height: 75px;
  width: 75px;
  display: none;
- }
- #music-player-inclement {
+}
+#music-player-inclement {
   position: absolute;
   top: 300px;
   left: 550px;
  height: 75px;
  width: 75px;
  display: none;
- }
- .output {
+}
+.output {
   position: absolute;
   bottom: 300px;
   left: 465px;
  height: 25px;
  width: 25px;
-
 }
 h1 {
   color: lightgreen;
